<resources>
    <string name="app_name">Profiler</string>
    <string name="title_home">Home</string>
    <string name="exchange">Exchange</string>
    <string name="title_contacts">Contacts</string>

    <string name="name_placeholder">First name</string>
    <string name="surname_placeholder">Last name</string>
    <string name="profile_picture_description">Profile Picture</string>
    <string name="bio_placeholder">Bio</string>
    <string name="number_placeholder">Number</string>

    <string name="linkedin_name">Linkedin</string>
    <string name="google_name"><![CDATA[<font color=#4285F4>G</font><font color=#DB4437>o</font><font color=#F4B400>o</font><font color=#4285F4>g</font><font color=#0F9D58>l</font><font color=#DB4437>e</font>]]></string>
    <string name="facebook_name">Facebook</string>
    <string name="personal_website_name">Website</string>
    <string name="whatsapp_name">WhatsApp</string>
    <string name="telegram_name">Telegram</string>
    <string name="profile_picture">Profile Picture</string>

    <string name="name_format">NAME</string>
    <string name="surname_format">SURNAME</string>
    <string name="bio_format">BIO</string>
    <string name="linkedin_comparison">LINKEDIN</string>
    <string name="google_comparison">GOOGLE</string>
    <string name="facebook_comparison">FACEBOOK</string>
    <string name="whatsapp_comparison">WHATSAPP</string>
    <string name="telegram_comparison">TELEGRAM</string>
    <string name="website_comparison">WEBSITE</string>

    <string name="send_contact_button">Send Contact</string>
    <string name="receive_contact_button">Receive Contact</string>

    <string name="settings_buttons_title">Settings</string>
    <string name="add_contact_settings">Add a contact</string>

    <string name="sort_by">Sort by</string>

    <string name="title_alert_no_permission">No permission granted</string>
    <string name="message_alert_no_permission">The app need to access your contacts and calls to ensure a fully experience</string>

    <string name="title_alert_error_nfc_mode">Error on initialization NFC</string>
    <string name="message_alert_error_nfc_mode">An error was occurred while initializing a NFC connection</string>

    <string name="nfc_writing_IO_exception">Error during NFC communication. Are the NFC devices close enough?</string>
    <string name="nfc_writing_format_exception">Format error - Text provided is incorrectly formatted</string>

    <string name="title_alert_permission_error">Error</string>

    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">OK</string>
    <string name="add">Add</string>
    <string name="allow">Allow</string>
    <string name="deny">Deny</string>
    <string name="continue_text">Continue</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="register_user_title">Register your data</string>
    <string name="register_user_message">Please, insert your contact information</string>
    <string name="edit_profile_button_title">Profile</string>
    <string name="set_home_button_title">Set home position</string>
    <string name="set_work_button_title">Set work position</string>
    <string name="title_activity_maps">Map</string>
    <string name="submit_button">Submit</string>

    <string name="set_time_intervals">Set time intervals</string>
    <string name="time_intervals_title">Time Intervals</string>
    <string name="time_interval_start">Interval starts at</string>
    <string name="time_interval_end">Interval ends at</string>

    <string name="favourite_contacts_text">Favourite contacts</string>
    <string name="contacts_text">Contacts list</string>

    <string name="dndmaw_text_button">Enable Do Not Disturb Me At Work mode</string>

    <string name="notification_permissions_needed">Notification permissions are needed to enable/disable do not disturb mode</string>
    <string name="location_permissions_error">You need location permissions to use this feature</string>
    <string name="number_bad_formatted">The number has an invalid format</string>
    <string name="nfc_contact_received">Contact received correctly</string>
    <string name="nfc_contact_sent">Contact sent correctly</string>


</resources>